--- a/CSS/header.css
+++ b/CSS/header.css
@@ -18,6 +18,7 @@ header a {
   background-color: inherit;
   padding: 12px;
   color: white;
+  margin: 0 auto;
 }
 
 /* Pushes logo and search bar to the left side of the header */
